2.10.3:

2006-11-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/adjustment.ccg:
	* gtk/src/adjustment.hg: Hand-code the constructor so that we can provide 
	the g_object_new() properties in a non-standard order, so that the value 
	is not ignored. This is what gtk_adjustment_new() does too.
	Bug #369335 from Daniel Holbach, via Vincent Levesque in the Ubuntu 
	Launchpad bug-tracker.

2006-10-11  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Added an appendix describing the optional 
	API for reduced resources devices, and the corresponding ifdefable macros.

2006-10-11  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_docs_override.xml: Provide a corrected version of the 
	Drawable::get_image() method, to avoid mentioning a function that 
	does not exist in gtkmm. Bug #358268 from Evgeny Rippi.  

2006-10-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Correct the documentation for 
	gtk_container_remove() and gtk_widget_add_mnemonic_label() to 
	avoid mention of non-existant destroy signal and destroy() method.
	Thanks to Nickolai Dobrynin for pointing this out.

2006-10-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Correct the links to the Memory Management 
	and libglademm chapters.

2006-10-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/listviewtext.cc: get_column_title(): 
	Use "" instead of Glib::ustring() in 
	g_return_val_if_fail() to fix an odd build problem with 
	gcc 3.3.6. Bug #352226. (Thomas Zajic)

2006-10-01  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* docs/FAQ/Makefile.am:
	* docs/Makefile.am:
	* docs/Makefile_web.am_fragment:
	* docs/images/Makefile.am:
	* docs/reference/Makefile.am:
	* docs/tutorial/Makefile.am:
	* examples/Makefile.am: Upload to the new hoster instead of to sourceforge.
	Abstracted the host and path names into docs/Makefile_web.am_fragment to 
	avoid duplication.

2.10.2:
