@@ -523,6 +523,7 @@ AC_CONFIG_FILES([
     tests/delete_cpp_child/Makefile
     tests/main_with_options/Makefile
     tests/menu_destruction/Makefile
+    tests/property_notification/Makefile
     tests/scrolledwindow/Makefile
     tests/wrap_existing/Makefile
 ])
