@@ -1,3 +1,10 @@
+2006-11-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* configure.in:
+	* tests/Makefile.am:
+	* tests/main.cc: Add new test, with commented-out test for an alternative 
+	API that I will add to glibmm.
+
 2.10.3:
 
 2006-11-08  Murray Cumming  <murrayc@murrayc.com>
